# MeshMind

./: .gitignore  Cargo.toml  Project_Report.md  README.md  Working Steps of LLM-Network.txt  ollama_host.bat  p2p_secret.txt  start-ollama.bat
conversations/: local.json
received/192.168.0.101/: local.json
received/192.168.0.102/: local.json
received/192.168.0.103/: local.json
received/192.168.0.104/: local.json
received/192.168.0.108/: local.json
received/192.168.25.37/: local.json
received/192.168.28.98/: local.json
src/: conversation.rs  main.rs  persistence.rs
src/ip/: mod.rs
src/llm/: mod.rs
src/tcp/: mod.rs
src/udp/: mod.rs
webpage/: p2p_secret.txt  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webpage/conversations/: local.json
webpage/received/192.168.0.103/: local.json
webpage/received/192.168.0.108/: local.json
webpage/src/: App.tsx  Login.tsx  PeersConversation.tsx  animations.ts  index.css  main.tsx
webpage/src/api/: llm.ts
webpage/src/components/: AnalyticsDashboard.tsx  FileSidebar.tsx  FileUpload.tsx  Navbar.tsx  NetworkBackground.tsx  SharedFilesPanel.tsx  SuggestionCard.tsx  TypedWelcome.tsx  WelcomeScreen.tsx
webpage/src/styles/: global.css
