[package]
name = "instance"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-embed="8.4.0"
actix-web = "4"
mime_guess = "2"
open = "5.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7" 
rusqlite = { version = "0.33.0", features = ["bundled"] }
sha2 = "0.10.8"
hex = "0.4.3"
actix-multipart = "0.6.1"
tokio = {version="1.37.0", features=["macros", "rt-multi-thread", "fs"]}
ipconfig = "0.3.2"
serde_json = "1"
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
actix-cors = "0.7.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
futures = "0.3"
hostname = "0.3"
once_cell = "1.19"
